--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           </a>
           <!-- Card 2 -->
           <a href="diya.html" class="card">
-            <img src="images/Diya/IMG_0770.JPG" alt="Diya Tomar">
+            <img src="images/Diya/IMG_0770.jpg" alt="Diya Tomar">
             <div class="overlay"><h3>Diya Tomar</h3></div>
           </a>
           <!-- Card 3 -->
