--- a/diya.html
+++ b/diya.html
@@ -23,7 +23,7 @@
 				<!-- Main -->
 					<div id="main">
             <article class="thumb">
-              <a href="images/Diya/IMG_0770.jpg" class="image"><img src="images/Diya/IMG_0770.jpg" alt="IMG_0770.jpg" /></a>
+              <a href="images/Diya/IMG1.jpg" class="image"><img src="images/Diya/IMG1.jpg" alt="IMG1.jpg" /></a>
               <h2>Diya</h2>
             </article>
 
@@ -223,4 +223,5 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 	</body>
+
 </html>
